--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -38,6 +40,9 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.0.0",
     "typescript-plugin-css-modules": "^5.0.1"
-  }
+  },
+  "homepage": "http://ansaraidarbek.github.io/finance_tracker_mvp",
+  
 }
